scrollbar style - [ fixed build bug ]

--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -154,7 +154,7 @@
 }
 
 /* 滚动条样式 */
-.gm-scrollbar {
+#app /deep/ .gm-scrollbar {
   &.-vertical {
     background-color:#222;
   }
